[package]
name = "git"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.28"
sha1 = "0.10.6"
hex = "0.4.3"
byteorder = "1.5.0"
bpaf = "0.9.8"
anyhow = "1.0.79"
chrono = "0.4.31"

[lints.clippy]
pedantic = "deny"
